# agent-loom

./: .gitignore  .iconsignature  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HOMEBREW.md  LICENSE  README.md  SECURITY.md  _config.yml  index.html  index.md  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Casks/: agentloom.rb
agents/: core.md  overlay-template.md  rust-tauri-svelte.md
crates/talent-cli/: Cargo.toml
crates/talent-cli/src/: main.rs
crates/talent-core/: Cargo.toml
crates/talent-core/examples/: test_migration.rs
crates/talent-core/src/: config.rs  error.rs  importer.rs  lib.rs  manager.rs  migration.rs  skill.rs  syncer.rs  target.rs  validator.rs  watcher.rs
docs/: ARCHITECTURE.md  _config.yml  index.html  index.md
docs/assets/css/: style.scss
docs/plans/: 2026-01-29-release-tooling-design.md  2026-01-29-talent-implementation.md
homebrew-cask/: README.md
homebrew-cask/Casks/: agentloom.rb
plans/: 20260129-talent-implementation.md  20260130-folder-import-and-drag-drop.md  20260130-simplified-add-target.md  TEMPLATE.md
scripts/: build.sh  bump-version.sh  dev.js  package.sh
src/: App.svelte
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/MenuBarIcon.imageset/: Contents.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  tray.rs
src/lib/: ConfirmDeleteModal.svelte  ImportDialog.svelte  ImportFromFolderModal.svelte  SearchBar.svelte  SkillEditor.svelte  TabBar.svelte  api.ts  types.ts
