[workspace]
resolver = "2"
members = ["crates/talent-core", "crates/talent-cli", "src-tauri"]

[workspace.package]
version = "1.0.3"
edition = "2021"
license = "MIT"
authors = ["Stefan Negouai"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
dirs = "6.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Windows-specific
junction = "1.2"

# Internal crates
agentloom-core = { path = "crates/talent-core" }
