[package]
name = "agent-skills-manager"
version = "1.0.0"
edition = "2021"
description = "Agent Skills Manager - Desktop App"
authors = ["Stefan Negouai"]
license = "MIT"
default-run = "agent-skills-manager"

[lib]
name = "agent_skills_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agent-skills-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
asm-core = { path = "../crates/talent-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
