[package]
name = "agentloom-app"
version = "1.0.0"
edition = "2021"
description = "AgentLoom - Desktop App"
authors = ["Stefan Negouai"]
license = "MIT"
default-run = "agentloom-app"

[lib]
name = "agentloom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agentloom-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
agentloom-core = { path = "../crates/talent-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
