[package]
name = "agentloom-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AgentLoom - Desktop App"
default-run = "agentloom-app"

[lib]
name = "agentloom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agentloom-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
agentloom-core = { path = "../crates/talent-core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
