[package]
name = "asm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for Agent Skills Manager"

[[bin]]
name = "asm"
path = "src/main.rs"

[dependencies]
asm-core.workspace = true
clap.workspace = true
serde_json.workspace = true
