[package]
name = "agentloom-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for AgentLoom"

[[bin]]
name = "agentloom"
path = "src/main.rs"

[dependencies]
agentloom-core.workspace = true
clap.workspace = true
serde_json.workspace = true
