[package]
name = "agentloom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for AgentLoom"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
chrono.workspace = true
walkdir.workspace = true
dirs.workspace = true

[target.'cfg(windows)'.dependencies]
junction.workspace = true

[dev-dependencies]
tempfile = "3.16"
